<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.onurtas.fleettracker.Fragment.DashboardFragment"
        android:label="@string/dashboard"
         tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_trips"
        android:name="com.onurtas.fleettracker.Fragment.TripsFragment"
        android:label="@string/trips"
        tools:layout="@layout/fragment_trips" />

    <fragment
        android:id="@+id/nav_vehicles"
        android:name="com.onurtas.fleettracker.Fragment.VehiclesFragment"
        android:label="@string/vehicles"
        tools:layout="@layout/fragment_vehicles" />

    <fragment
        android:id="@+id/nav_drivers"
        android:name="com.onurtas.fleettracker.Fragment.DriversFragment"
        android:label="@string/drivers"
        tools:layout="@layout/fragment_drivers" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.onurtas.fleettracker.Fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>