<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/filterBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/filterToggleGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:checkedButton="@+id/allButton"
                    app:singleSelection="true"
                    app:selectionRequired="true">

                    <Button
                        android:id="@+id/allButton"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:text="@string/trips_filter_all"
                        android:textSize="10sp"/>

                    <Button
                        android:id="@+id/monthlyButton"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="11"
                        android:text="@string/trips_filter_last_month"
                        android:textSize="10sp"/>

                    <Button
                        android:id="@+id/weeklyButton"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/trips_filter_last_week"
                        android:textSize="10sp"/>

                    <Button
                        android:id="@+id/dailyButton"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/trips_filter_today"
                        android:textSize="10sp"/>

                </com.google.android.material.button.MaterialButtonToggleGroup>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filterBar"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_bar_trip_hint"
                app:endIconDrawable="@android:drawable/ic_menu_search"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/filterButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/filter_icon"
                android:padding="8dp" />
        </LinearLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/pullToRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/searchBarLayout"
            android:layout_marginTop="10dp">

            <ListView
                android:id="@+id/tripsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/transparent"
                android:dividerHeight="10dp" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loadingProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:visibility="gone"
        tools:visibility="invisible">


        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true"
            android:indeterminateTint="?attr/colorAccent"
            android:indeterminateTintMode="src_atop" />

    </RelativeLayout>

</FrameLayout>